tests/sksl/errors/UndeclaredFunction.dsl.glsl
### Compilation failed:

error: unknown identifier 'foo'

error: not a function

2 errors
